add MyBatis_setting, Modify views...Survey관련 Java파일

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,9 +1,9 @@
 # For Mysql
 jdbc.datasource=jdbc/DataSource
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8
-jdbc.username=root
-jdbc.password=mahau
+jdbc.url=jdbc:mysql://70.12.115.59:3306/seoulmode
+jdbc.username=Inhog
+jdbc.password=inhog
 
 jdbc.minIdle = 0
 jdbc.maxIdle = 2
@@ -17,3 +17,9 @@ jdbc.maxActive = 5
 #jdbc.password=1234
 
 
+#For MariaDB
+#jdbc.datasource=jdbc/DataSource
+#jdbc.diverClassName=org.mariadb.jdbc.Driver
+#jdbc.url=jdbc:mariadb://localhost:3306/seoulmode
+#jdbc.username=Inhog
+#jdbc.password=Inhog
