--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 # For Mysql
 jdbc.datasource=jdbc/DataSource
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://70.12.115.59:3306/seoulmode
+jdbc.url=jdbc:mysql://70.12.115.59:3306/seoulmode?useUnicode=true&characterEncoding=utf8
 jdbc.username=Inhog
 jdbc.password=inhog
 
