180711 인호 커밋,survey/insert 수정 중

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -5,6 +5,11 @@ jdbc.url=jdbc:mysql://70.12.115.59:3306/seoulmode?useUnicode=true&characterEncod
 jdbc.username=Inhog
 jdbc.password=inhog
 
+#For Amazon
+#jdbc.url=jdbc:mysql://aa103gxk0x5tr65.cmg1qev6m5ha.ap-northeast-2.rds.amazonaws.com:3306/ebdb?useUnicode=true&characterEncoding=utf8
+#jdbc.username=scott
+#jdbc.password=scotttiger
+
 jdbc.minIdle = 0
 jdbc.maxIdle = 2
 jdbc.maxActive = 5
