--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,9 +1,9 @@
 # For Mysql
-jdbc.datasource=jdbc/DataSource
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://70.12.115.59:3306/seoulmode?useUnicode=true&characterEncoding=utf8
-jdbc.username=Inhog
-jdbc.password=inhog
+#jdbc.datasource=jdbc/DataSource
+#jdbc.driverClassName=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://aa18sh46h9nigbj.cwhi7yytukvp.ap-northeast-2.rds.amazonaws.com:3306/ebdb?useUnicode=true&characterEncoding=utf8
+#jdbc.username=Inhog
+#jdbc.password=inhog1234
 
 jdbc.minIdle = 0
 jdbc.maxIdle = 2
@@ -23,3 +23,10 @@ jdbc.maxActive = 5
 #jdbc.url=jdbc:mariadb://localhost:3306/seoulmode
 #jdbc.username=Inhog
 #jdbc.password=Inhog
+
+# For Mysql
+jdbc.datasource=jdbc/DataSource
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://70.12.115.59:3306/seoulmode?useUnicode=true&characterEncoding=utf8
+jdbc.username=Inhog
+jdbc.password=inhog
