조오금 수정 -> DDL ,DML 만듬 에버노트

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -32,6 +32,6 @@ jdbc.maxActive = 5
 # For Mysql
 jdbc.datasource=jdbc/DataSource
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://70.12.115.59:3306/seoulmode?useUnicode=true&characterEncoding=utf8
+jdbc.url=jdbc:mysql://70.12.115.59:3306/pj?useUnicode=true&characterEncoding=utf8
 jdbc.username=Inhog
 jdbc.password=inhog
