설문 List 살짝 수정, 한글 깨짐 파일 수정

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -6,9 +6,9 @@
 #jdbc.password=inhog1234
 
 #For Amazon
-#jdbc.url=jdbc:mysql://aa103gxk0x5tr65.cmg1qev6m5ha.ap-northeast-2.rds.amazonaws.com:3306/ebdb?useUnicode=true&characterEncoding=utf8
-#jdbc.username=scott
-#jdbc.password=scotttiger
+#jdbc.url=jdbc:mysql://aa1bro60v45phqr.cmg1qev6m5ha.ap-northeast-2.rds.amazonaws.com:3306/ebdb?useUnicode=true&characterEncoding=utf8
+#jdbc.username=Inhog
+#jdbc.password=inhoginhog
 
 jdbc.minIdle = 0
 jdbc.maxIdle = 2
@@ -32,6 +32,6 @@ jdbc.maxActive = 5
 # For Mysql
 jdbc.datasource=jdbc/DataSource
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://70.12.115.59:3306/pj?useUnicode=true&characterEncoding=utf8
+jdbc.url=jdbc:mysql://localhost:3306/inhog?useUnicode=true&characterEncoding=utf8
 jdbc.username=Inhog
 jdbc.password=inhog
